@@ -2,6 +2,10 @@
 
 	* lib: if "fsname=" option was given, pass it to fusermount
 
+	* fuse_opt: add new fuse_opt_insert_arg() function, which is
+	needed by filesystems to implement some argument manipulations
+	correctly
+
 2006-01-18  Miklos Szeredi <miklos@szeredi.hu>
 
 	* kernel: fix detection of case when fuse is not configured into
